fixed info page design overflow and fetch data timeout time

--- a/src/Components/Styles/Movieinfo.css
+++ b/src/Components/Styles/Movieinfo.css
@@ -3,20 +3,22 @@
 }
 
 .movie--info--container {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .movie--info {
   padding: 2rem;
-  background: radial-gradient(45.72% 45.72% at 52.4% 54.28%,
-      #f8c9dfed 0%,
-      #dfb6f5 100%);
+  background: radial-gradient(
+    45.72% 45.72% at 52.4% 54.28%,
+    #f8c9dfed 0%,
+    #dfb6f5 100%
+  );
   display: grid;
   grid-template-columns: repeat(1, 100%);
   place-items: center center;
   gap: 1.5rem;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -38,14 +40,13 @@
 .poster--img {
   width: 350px;
   height: 350px;
-  box-shadow: 1px 1px 15px 3px rgba(0, 0, 0, 0.2);
 }
 
-.poster--img>img {
+.poster--img > img {
   width: 100%;
   object-fit: contain;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+  filter: drop-shadow(1px 1px 15px rgba(0, 0, 0, 0.6));
 }
 
 .add--info:not(h1) {
